Update project explanation and try-what-do-you-remember

--- a/Class Presentations/reveal-presentations/FinalProject.html
+++ b/Class Presentations/reveal-presentations/FinalProject.html
@@ -75,7 +75,28 @@
 					```
 				</section>
 				<section>
-          <p>A question</p>
+          <p>What is a user story?</p>
+        </section>
+        <section>
+          <p>"A user story is a tool used in Agile software development to
+             capture a description of a software feature from an end-user
+             perspective." (searchsoftwarequality.techtarget.com/definition/user-story)</p>
+        </section>
+        <section>
+          <p>What is the usual format of a user story?</p>
+        </section>
+        <section>
+          <p>As a (type of) user, I want to ____(some goal)___ so that ___(some reason)__.</p>
+          <p>The type of user doesn't have to be defined, but it can for more detail.</p>
+        </section>
+        <section>
+          <p>What really stood out to you about your visit to Detroit Labs?</p>
+        </section>
+        <section>
+          <p>What (if anything) did any of the guest speakers say that surprised you?</p>
+        </section>
+        <section>
+          <p>What new thing did you learn about the tech industry through the visit?</p>
         </section>
 			</section>
 
@@ -103,161 +124,86 @@
 				</section>
 
 				<section>
+          <h2>MVP (minimum viable product):</h2>
 					<ul>
-						<li>a two-paragraph explanation that describes why you chose the
-							topic you chose, what it can be useful for, and any other
-							information that you want to share with the user.</li>
-						<li>A step-by-step guide for implementing the thing that you are
-								describing. This guide should include at least one code snippet
-								to illustrate the topic. (You may add more if you want to show
-								additional examples, or real use cases you have found.)</li>
+            <li>Use CSS </li>
+            <li>Use Javascript</li>
+            <li>Has header with story title</li>
+            <li>Single HTML page (text updates)</li>
+            <li>Has 2+ for user selection</li>
+            <li>Has 2+ level deep story tree</li>
 					</ul>
 				</section>
 
 				<section>
+          <h2>2.0</h2>
 					<ul>
-						<li>a quiz for users at the end, to answer at at least six questions
-							about the information on your site</li>
-							<li>that requests the user's name</li>
-							<li>and includes one short text answer</li>
-							<li>that is scored</li>
-							<li>and provides the correct answers to the user</li>
-							<li>works cited (a list of your sources)</li>
-						</ul>
-				</section>
-
-				<section>
-					<p>This project should be completed in pairs or on your own. If you
-						work in a pair, the requirements are doubled (four-paragraph
-						explanation, six code snippets, a twelve-question quiz).</p>
-				</section>
-
-				<section>
-					<h1>Teamwork Makes the Dream Work</h1>
-					<p>We’ve said this before and we’ll say it every time, “great software is created by great teams” -a bunch of smart people. We’ve also talked about the different roles on software teams: developers, quality assurance, designers, and project managers.</p>
-				</section>
-
-				<section>
-					<h1>Building Great Teams</h1>
-					<p>There’s science and studies about how to build a strong effective team. We’re just going to parse out some very important points:</p>
-					<ul>
-						<li>Teams should create norms/agreements on how they will work together</li>
-						<li>Teams should have a common defined goal they all work towards</li>
-						<li>Teams should play to each other’s strengths and weaknesses</li>
-						<li>Teams should maintain honest and open communication</li>
+            <li>Use color scheme (elements and background)</li>
+            <li>Use w3 method for setting event listeners</li>
+            <li>Has 1+ images </li>
+            <li>Requests username and prints on page</li>
+            <li>Use external font</li>
+            <li>Text of story is centered on page with borders around it</li>
+            <li>Has subtitle that updates as user progresses through the story</li>
 					</ul>
 				</section>
 
 				<section>
-					<h1>Keep In Mind</h1>
-					<p>Before starting work, try to come up with some norms and define the goal. Communicate with one another about each other’s vision for the final product to ensure everyone’s on the same page. Remember that every member is valuable and necessary to the project.</p>
+					<h2>3.0</h2>
+          <ul>
+            <li>Create intro page that accepts 2+ types of user info (e.g. name and age) using form elements</li>
+            <li>Use event listener for onmouseover to change the color of an element</li>
+            <li>Use sound effects</li>
+            <li>Incorporate user information into story</li>
+            <li>Has 2+ images that change based on user location in story</li>
+            <li>Has progress bar that updates as user progresses through the story</li>
+            <li>Has 1+ animation</li>
+            <li>Provide user ability to start over at the end of the story</li>
+          </ul>
 				</section>
 
 				<section>
-					<h1>Feedback Loops</h1>
-					<p>In order for a team to work well together, teammates have to be open and honest with one another. This is especially important on software teams where there are many parts that have to move together effectively to produce a product. This is where the value of good feedback comes in.</p>
+					<h1>Plan Ahead</h1>
+					<p>Planning is just as important for an individual project as it is for a group project.
+          It might even be more so, since you only have yourself to keep you accountable.</p>
+				</section>
+
+					<section>
+						<h2>This project is due at the beginning of class on Thursday, June 9.</h2>
 					</section>
 
 					<section>
-						<h1>Giving Constructive Feedback</h1>
-						<p>When giving feedback, feedback should be:</p>
-						<ul>
-							<li>actionable: A behavior that can be improved upon</li>
-							<li>specific: Feedback should be clearly defined</li>
-							<li>timely: Give feedback in the moment</li>
-						</ul>
-						<p>Remember you’re giving feedback because you want to help, not harm.</p>
-					</section>
-
-					<section>
-						<h1>Receiving Constructive Feedback</h1>
-						<p>When receiving feedback, you should be:</p>
-						<ul>
-							<li>receptive: Receive the feedback with an open mind </li>
-							<li>reflective: Reflect on what you’re being told and be open to the possibility that they’re right</li>
-							<li>inquisitive: Ask clarifying questions</li>
+						<h2>Goals</h2>
+						<ul class="checklist">
+							<li>
+								<input type="checkbox" id="goal1" checked />
+								<label for="goal1">Project Explanation</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal2" />
+								<label for="goal2">Work Time</label>
+							</li>
 						</ul>
 					</section>
 
 					<section>
-						<h1>Keep In Mind</h1>
-						<p>While working on this project, remember the value of feedback. If a teammate’s actions are nudging the project off course, give them that feedback. If you’re receiving feedback from your teammates, remember it’s because they value you and the project. </p>
+						<h2>Work time</h2>
 					</section>
 
 					<section>
-						<h1>Plan Ahead</h1>
-						<p>Planning is one of the most important aspects of a successful project. Good planning can make a challenging project easier. Poor planning can make an easy project complicated. Proper project planning has multiple components such as, scope management, user story creation, estimating, project scheduling and resource management. Then after a plan is created it needs to be reviewed and revised throughout the project.
-							How do you plan a software project?</p>
+						<h2>And Now We're Done</h2>
+						<ul class="checklist">
+							<li>
+								<input type="checkbox" id="goal1" checked />
+								<label for="goal1">Project Explanation</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal2" checked/>
+								<label for="goal2">Work Time</label>
+							</li>
+						</ul>
+						<p text-align="right">At least...by our definition of done.</p>
 					</section>
-
-					<section>
-						<h1>Project Planning Overview</h1>
-						<p>We aren’t going to take you through all the steps of project planning, only what we believe will be most vital to the success of this product (we’ll send out additional slides that covers the parts we’re skipping). Let’s start with something we’ve reviewed before: User Story Creation</p>
-					</section>
-
-					<section>
-						<h1>Users Make the Product Go Round</h1>
-						<p>Think about the product from the point of view of the user. This is important not just in development but also in design. Where should the button go? Well, where would the user expect it? Should we add a subheader? Well, would the user expect a subheader? Would a subheader help the user understand the information presented?</p>
-					</section>
-
-					<section>
-						<h1>Break It Down</h1>
-						<p>Now that you have your assignment. We want you to break down the project into smaller parts based on the user’s perspective.
-								Ex: As a student user I want to read information about this javascript thing in paragraph form so that I can understand how it works.</p>
-					</section>
-
-					<section>
-						<h1>Break It Down Again</h1>
-						<p>After you’ve written your user stories, I want you to break them down into smaller tasks. The tasks should build up into the completed user story. Each task should be something one person/pair can work on.
-							Ex:</p>
-							<ol>
-								<li>Research a javascript topic</li>
-								<li>Outline the steps for the guide</li>
-								<li>Draft a code snippet using the variables</li>
-							</ol>
-						</section>
-
-						<section>
-							<h1>Get Into the Flow</h1>
-							<p>Development is a process. Planning, design, development, testing, repeat. For this project we want you to use this development cycle. Once you’ve planned your project and before writing any code, take a moment to think about and draft the design. Now you can start writing code to complete the tasks. After each user story, test it out to ensure the user is getting the planned experience. Repeat.</p>
-						</section>
-
-						<section>
-							<h2>This project is due at the end of class on Monday, May 16.</h2>
-						</section>
-
-						<section>
-							<h2>Goals</h2>
-							<ul class="checklist">
-								<li>
-									<input type="checkbox" id="goal1" checked />
-									<label for="goal1">Project Explanation</label>
-								</li>
-								<li>
-									<input type="checkbox" id="goal2" />
-									<label for="goal2">Work Time</label>
-								</li>
-							</ul>
-						</section>
-
-						<section>
-							<h2>Work time</h2>
-						</section>
-
-						<section>
-							<h2>And Now We're Done</h2>
-							<ul class="checklist">
-								<li>
-									<input type="checkbox" id="goal1" checked />
-									<label for="goal1">Project Explanation</label>
-								</li>
-								<li>
-									<input type="checkbox" id="goal2" checked/>
-									<label for="goal2">Work Time</label>
-								</li>
-							</ul>
-							<p text-align="right">At least...by our definition of done.</p>
-						</section>
 
 
 		</div>
